sass/editor/_editor-main.scss
/* ... */
.pcui-container.picker-scene-panel {
    .ui-list.scene-list {
        margin: 0;
        padding: 0;
        background: transparent;
        border: 1px solid $border-primary;
        border-top: none;
        border-radius: 0 0 6px 6px;
        overflow: hidden;

        > li {
            @extend .font-regular;

            height: 58px;
            line-height: 58px;
            padding-left: 15px;
            padding-right: 15px;
            position: relative;
            border-bottom: 1px solid $border-primary;
            transition: background-color 100ms ease;

            &:last-child {
                border-bottom: none;
            }

            &.selected {
                background-color: transparent;
            }

            &.current:hover {
                background-color: transparent;
                cursor: default;
            }

            > .pcui-label.name {
                @extend .font-bold;

                font-size: 14px;
                position: absolute;
                cursor: pointer;
                top: 13px;
                max-width: 710px;
                overflow: hidden;
                text-overflow: ellipsis;
                white-space: nowrap;
                line-height: 1;
                color: $text-primary;
                margin: 3px;

                &.selectable {
                    user-select: text;
                    cursor: text;
                }
            }

            > .primary {
                @extend .font-icon;

                top: 15px;
                left: 0;
                line-height: 1;
                height: 20px;
                color: $text-darkest;
                background: transparent;
                border: none;
                font-size: 16px;
                position: absolute;

                &:not(.disabled):hover {
                    cursor: pointer;
                    color: $text-dark;
                }
            }

            &.primary > .primary {
                color: $text-active;

                &:hover {
                    color: $text-active;
                    cursor: default;
                }
            }

            &:not(.current, .disabled):hover {
                background-color: #354144;
                cursor: pointer;
            }

            &.current {
                &::after {
                    @extend .font-bold;

                    content: 'CURRENT';
                    position: absolute;
                    top: 19px;
                    right: 48px;
                    height: 18px;
                    line-height: 18px;
                    padding: 0 6px;
                    text-align: center;
                    color: $text-active;
                    border: 1px solid rgb(255 122 35 / 50%);
                    background-color: rgb(0 0 0 / 14%);
                    border-radius: 4px;
                    text-transform: uppercase;
                    font-size: 10px;
                }
            }

            > .pcui-label.date {
                position: absolute;
                top: 33px;
                font-size: 12px;
                color: $text-darkest;
                line-height: 1;
                margin: 3px;
            }

            > .pcui-button.dropdown {
                position: absolute;
                top: 15px;
                right: 12px;
                width: 28px;
                height: 28px;
                line-height: 28px;
                border: 1px solid transparent;
                border-radius: 4px;
                padding: 0;
                margin: 0;
                text-align: center;
                vertical-align: top;
                box-shadow: none;

                @extend .font-icon;

                font-size: 14px;
                color: $text-dark;
                background-color: transparent;
                transition: color 100ms, background-color 100ms, border-color 100ms, box-shadow 100ms;

                &:hover,
                &:focus {
                    color: $text-primary;
                    background-color: $bcg-dark;
                    border-color: $bcg-darkest;
                    box-shadow: $element-shadow-hover;
                }

                &.clicked {
                    color: $text-primary;
                    background-color: $bcg-darkest;
                    border-color: $border-primary;
                    box-shadow: $element-shadow-active;
                }
            }

            > .pcui-label.new-scene-label {
                margin: 3px 0;
                display: block;
                line-height: 22px;
            }

            > .pcui-text-input {
                display: block;
                width: 100%;
                line-height: 1;
                margin: 0;

                > input {
                    padding: 0 8px;
                }
            }
        }
    }
}
/* ... */

